Update nav link

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
     <header>
         <h1>Your Name</h1>
         <nav>
-            <a href="#about">About</a>
-            <a href="#article">Article</a>
-            <a href="#etc">Etc.</a>
+            <a href="https://imabakagain.github.io/about">About</a>
+            <a href="https://imabakagain.github.io/article">Article</a>
+            <a href="https://imabakagain.github.io/etc">Etc.</a>
         </nav>
     </header>
 
