--- a/index.html
+++ b/index.html
@@ -87,7 +87,11 @@
             <h2>Etc.</h2>
             <p>Other interesting things about me! This might include hobbies, random thoughts, or anything else I want to share.</p>
         </section>
-
+        
+        <section id = "images">
+            <img src="/assets/images/FinLLM.png" alt="Cup illustration" class="cup-image">
+        </section>
+        
         <section id="projects">
             <h2>Projects</h2>
             <div class="projects">
