--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
     <main>
         <section id="home" class="hero">
             <h1>AI Researcher & Industry Analyst</h1>
-            <div class="subtitle">Columbia EE Masters | Expert in LLMs, GEO, AI Systems</div>
+            <div class="subtitle">Columbia EE Masters | Researcher in LLMs, GEO, AI Systems</div>
             <div class="description">
                 Leading AI industry research with 200+ tools evaluated, 5+ reports published with millions of views, 
                 and specialized expertise in Generative Engine Optimization (GEO) and AI agent systems.
@@ -391,9 +391,9 @@
                     <p>Comprehensive analysis of China's AI large model ecosystem, covering technology trends, market dynamics, and policy implications. Published in collaboration with People's Daily.</p>
                 </div>
                 <div class="project">
-                    <h3>2024 Enterprise Digital Transformation Report</h3>
+                    <h3>2024 Listed Company Digital Transformation Report</h3>
                     <div class="impact">Enterprise adoption strategies</div>
-                    <p>In-depth research on enterprise AI adoption patterns, implementation challenges, and success factors across 50+ companies.</p>
+                    <p>In-depth research on enterprise AI adoption patterns, implementation challenges, and success factors across 100+ listed companies.</p>
                 </div>
                 <div class="project">
                     <h3>Global AIGC Report</h3>
